// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid component loading text and action 1`] = `
<div
  className="table-responsive"
>
  <div
    className="grid-messages"
  />
  <table
    className="table table-striped table-bordered"
  >
    <thead>
      <tr>
        <th
          className="grid-header-cell"
          onClick={[Function]}
          style={
            Object {
              "minWidth": undefined,
            }
          }
        >
          Player Name
        </th>
        <th
          className="grid-header-cell"
          onClick={[Function]}
          style={
            Object {
              "minWidth": undefined,
            }
          }
        >
          Number
        </th>
        <th
          className="grid-header-cell"
          onClick={[Function]}
          style={
            Object {
              "minWidth": undefined,
            }
          }
        >
          Position
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="grid-loading"
      >
        <td
          colSpan={3}
        >
          You data is loading....
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Grid component render with messages 1`] = `
<div
  className="table-responsive"
>
  <div
    className="grid-messages"
  >
    <div
      className="grid-message"
    >
      There are 1 rows not shown due to unapproved QC state
    </div>
  </div>
  <table
    className="table table-striped table-bordered"
  >
    <thead>
      <tr>
        <th
          className="grid-header-cell"
          onClick={[Function]}
          style={
            Object {
              "minWidth": undefined,
            }
          }
        >
          name
        </th>
        <th
          className="grid-header-cell"
          onClick={[Function]}
          style={
            Object {
              "minWidth": undefined,
            }
          }
        >
          number
        </th>
        <th
          className="grid-header-cell"
          onClick={[Function]}
          style={
            Object {
              "minWidth": undefined,
            }
          }
        >
          position
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className=""
      >
        <td
          style={
            Object {
              "textAlign": "left",
            }
          }
        >
          Dee Gordon
        </td>
        <td
          style={
            Object {
              "textAlign": "left",
            }
          }
        >
          9
        </td>
        <td
          style={
            Object {
              "textAlign": "left",
            }
          }
        >
          4
        </td>
      </tr>
      <tr
        className=""
      >
        <td
          style={
            Object {
              "textAlign": "left",
            }
          }
        >
          Mike Zunino
        </td>
        <td
          style={
            Object {
              "textAlign": "left",
            }
          }
        >
          3
        </td>
        <td
          style={
            Object {
              "textAlign": "left",
            }
          }
        >
          2
        </td>
      </tr>
      <tr
        className=""
      >
        <td
          style={
            Object {
              "textAlign": "left",
            }
          }
        >
          Kyle Seager
        </td>
        <td
          style={
            Object {
              "textAlign": "left",
            }
          }
        >
          15
        </td>
        <td
          style={
            Object {
              "textAlign": "left",
            }
          }
        >
          5
        </td>
      </tr>
      <tr
        className=""
      >
        <td
          style={
            Object {
              "textAlign": "left",
            }
          }
        >
          Zero
        </td>
        <td
          style={
            Object {
              "textAlign": "left",
            }
          }
        >
          0
        </td>
        <td
          style={
            Object {
              "textAlign": "left",
            }
          }
        >
          0
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Grid component render with non-default properties 1`] = `
<div
  className="table-responsive"
>
  <div
    className="grid-messages"
  />
  <table
    className="table-cellular table-striped table-condensed"
  >
    <thead>
      <tr>
        <th
          className="grid-header-cell"
          onClick={[Function]}
          style={
            Object {
              "minWidth": "118px",
            }
          }
        >
          Player Name
        </th>
        <th
          className="grid-header-cell"
          onClick={[Function]}
          style={
            Object {
              "minWidth": "78px",
            }
          }
        >
          Number
        </th>
        <th
          className="grid-header-cell"
          onClick={[Function]}
          style={
            Object {
              "minWidth": "94px",
            }
          }
        >
          Position
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className=""
      >
        <td
          style={
            Object {
              "textAlign": "left",
            }
          }
        >
          Dee Gordon
        </td>
        <td
          style={
            Object {
              "textAlign": "left",
            }
          }
        >
          9
        </td>
        <td
          style={
            Object {
              "textAlign": "left",
            }
          }
        >
          2B
        </td>
      </tr>
      <tr
        className=""
      >
        <td
          style={
            Object {
              "textAlign": "left",
            }
          }
        >
          Mike Zunino
        </td>
        <td
          style={
            Object {
              "textAlign": "left",
            }
          }
        >
          3
        </td>
        <td
          style={
            Object {
              "textAlign": "left",
            }
          }
        >
          C
        </td>
      </tr>
      <tr
        className=""
      >
        <td
          style={
            Object {
              "textAlign": "left",
            }
          }
        >
          Kyle Seager
        </td>
        <td
          style={
            Object {
              "textAlign": "left",
            }
          }
        >
          15
        </td>
        <td
          style={
            Object {
              "textAlign": "left",
            }
          }
        >
          3B
        </td>
      </tr>
      <tr
        className=""
      >
        <td
          style={
            Object {
              "textAlign": "left",
            }
          }
        >
          Zero
        </td>
        <td
          style={
            Object {
              "textAlign": "left",
            }
          }
        >
          0
        </td>
        <td
          style={
            Object {
              "textAlign": "left",
            }
          }
        >
          Bench
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Grid component rendering with data 1`] = `
<div
  className="table-responsive"
>
  <div
    className="grid-messages"
  />
  <table
    className="table table-striped table-bordered"
  >
    <thead>
      <tr>
        <th
          className="grid-header-cell"
          onClick={[Function]}
          style={
            Object {
              "minWidth": undefined,
            }
          }
        >
          name
        </th>
        <th
          className="grid-header-cell"
          onClick={[Function]}
          style={
            Object {
              "minWidth": undefined,
            }
          }
        >
          number
        </th>
        <th
          className="grid-header-cell"
          onClick={[Function]}
          style={
            Object {
              "minWidth": undefined,
            }
          }
        >
          position
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className=""
      >
        <td
          style={
            Object {
              "textAlign": "left",
            }
          }
        >
          Dee Gordon
        </td>
        <td
          style={
            Object {
              "textAlign": "left",
            }
          }
        >
          9
        </td>
        <td
          style={
            Object {
              "textAlign": "left",
            }
          }
        >
          4
        </td>
      </tr>
      <tr
        className=""
      >
        <td
          style={
            Object {
              "textAlign": "left",
            }
          }
        >
          Mike Zunino
        </td>
        <td
          style={
            Object {
              "textAlign": "left",
            }
          }
        >
          3
        </td>
        <td
          style={
            Object {
              "textAlign": "left",
            }
          }
        >
          2
        </td>
      </tr>
      <tr
        className=""
      >
        <td
          style={
            Object {
              "textAlign": "left",
            }
          }
        >
          Kyle Seager
        </td>
        <td
          style={
            Object {
              "textAlign": "left",
            }
          }
        >
          15
        </td>
        <td
          style={
            Object {
              "textAlign": "left",
            }
          }
        >
          5
        </td>
      </tr>
      <tr
        className=""
      >
        <td
          style={
            Object {
              "textAlign": "left",
            }
          }
        >
          Zero
        </td>
        <td
          style={
            Object {
              "textAlign": "left",
            }
          }
        >
          0
        </td>
        <td
          style={
            Object {
              "textAlign": "left",
            }
          }
        >
          0
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Grid component rendering with data and columns 1`] = `
<div
  className="table-responsive"
>
  <div
    className="grid-messages"
  />
  <table
    className="table table-striped table-bordered"
  >
    <thead>
      <tr>
        <th
          className="grid-header-cell"
          onClick={[Function]}
          style={
            Object {
              "minWidth": undefined,
            }
          }
        >
          Player Name
        </th>
        <th
          className="grid-header-cell"
          onClick={[Function]}
          style={
            Object {
              "minWidth": undefined,
            }
          }
        >
          Number
        </th>
        <th
          className="grid-header-cell"
          onClick={[Function]}
          style={
            Object {
              "minWidth": undefined,
            }
          }
        >
          Position
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className=""
      >
        <td
          style={
            Object {
              "textAlign": "left",
            }
          }
        >
          Dee Gordon
        </td>
        <td
          style={
            Object {
              "textAlign": "left",
            }
          }
        >
          9
        </td>
        <td
          style={
            Object {
              "textAlign": "left",
            }
          }
        >
          2B
        </td>
      </tr>
      <tr
        className=""
      >
        <td
          style={
            Object {
              "textAlign": "left",
            }
          }
        >
          Mike Zunino
        </td>
        <td
          style={
            Object {
              "textAlign": "left",
            }
          }
        >
          3
        </td>
        <td
          style={
            Object {
              "textAlign": "left",
            }
          }
        >
          C
        </td>
      </tr>
      <tr
        className=""
      >
        <td
          style={
            Object {
              "textAlign": "left",
            }
          }
        >
          Kyle Seager
        </td>
        <td
          style={
            Object {
              "textAlign": "left",
            }
          }
        >
          15
        </td>
        <td
          style={
            Object {
              "textAlign": "left",
            }
          }
        >
          3B
        </td>
      </tr>
      <tr
        className=""
      >
        <td
          style={
            Object {
              "textAlign": "left",
            }
          }
        >
          Zero
        </td>
        <td
          style={
            Object {
              "textAlign": "left",
            }
          }
        >
          0
        </td>
        <td
          style={
            Object {
              "textAlign": "left",
            }
          }
        >
          Bench
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Grid component rendering with no data and columns 1`] = `
<div
  className="table-responsive"
  data-gridid="someId"
>
  <div
    className="grid-messages"
  />
  <table
    className="table table-striped table-bordered"
  >
    <thead>
      <tr>
        <th
          className="grid-header-cell"
          onClick={[Function]}
          style={
            Object {
              "minWidth": undefined,
            }
          }
        >
          Player Name
        </th>
        <th
          className="grid-header-cell"
          onClick={[Function]}
          style={
            Object {
              "minWidth": undefined,
            }
          }
        >
          Number
        </th>
        <th
          className="grid-header-cell"
          onClick={[Function]}
          style={
            Object {
              "minWidth": undefined,
            }
          }
        >
          Position
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="grid-empty"
      >
        <td
          colSpan={3}
        >
          my empty text
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
